# jarvis-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  actions.py  browser.py  calendar_access.py  computer_use.py  gui_actions.py  llm_router.py  mail_access.py  memory.py  notes_access.py  planner.py  pyproject.toml  safety.py  server.py  work_mode.py
.trunk/: trunk.yaml
docs/: voice-commands.md
docs/plans/: 2026-04-22-multilingual-llm-router-implementation.md  2026-05-11-general-agent-foundations.md  2026-05-12-computer-use-phase6.md  2026-05-12-gui-actions-phase4.md  2026-05-12-gui-actions-phase5.md  jarvis-voice-stateless-valiant-audit.md  jarvis-voice-stateless-valiant.md
docs/specs/: 2026-04-22-multilingual-llm-router-design.md  2026-04-23-clap-wake-today-report-design.md  2026-05-11-general-agent-design.md  2026-05-12-gui-actions-phase4-design.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: clap.ts  index.html  main.ts  orb.ts  session.ts  settings.ts  style.css  voice.ts  wake.ts  ws.ts
frontend/test/: clap.test.ts  session.test.ts  wake.test.ts
scripts/: start.sh
tests/: test_actions.py  test_browser.py  test_calendar_access.py  test_computer_use.py  test_gui_actions.py  test_llm_router.py  test_memory.py  test_planner.py  test_safety.py  test_server.py  test_server_loop.py  test_server_pending.py  test_work_mode.py
tests/integration/: test_gui_actions_live.py
