[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS Voice Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.39.0,<1.0",
  "openai>=1.0.0,<2.0",
  "httpx>=0.27.0,<1.0",
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.32.0,<1.0",
  "pydantic>=2.0.0,<3.0",
  "websockets>=13.0,<16.0",
  "playwright>=1.40.0,<2.0",
  "pyyaml>=6.0,<7.0",
  "sounddevice>=0.4.6,<1.0",
  "numpy>=1.26.0,<3.0",
  "python-dotenv>=1.0.0,<2.0",
  "pyobjc-framework-ApplicationServices>=11.0,<12.0",
  "pyobjc-framework-Cocoa>=11.0,<12.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3,<10.0.0"]

[tool.pytest.ini_options]
addopts = "-m 'not macos'"
markers = [
  "macos: live macOS-only integration tests requiring Accessibility permission",
]
